--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,14 @@
 version: "3.9"
 services:
   backend:
-    build: .
+    build: ./Backend
     ports:
       - "5000:5000"
+    environment:
+      - FLASK_ENV=development  
     depends_on:
       - db
+
   db:
     image: postgres:latest
     environment:
@@ -14,3 +17,12 @@ services:
       POSTGRES_DB: youtube_crud
     ports:
       - "5433:5432"
+
+  frontend:
+    build: ./Frontend
+    ports:
+      - "3000:3000"
+    environment:
+      - CHOKIDAR_USEPOLLING=true
+    depends_on:
+      - backend
