--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -1,10 +1,15 @@
-FROM python:3.9-slim
+FROM python:3.9-slim-buster
 
 WORKDIR /app
 
 COPY requirements.txt requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
+RUN pip install requests
+
 COPY . .
 
-CMD ["python3", "app.py"]
+COPY wait-for-it.sh /usr/local/bin/wait-for-it.sh
+RUN chmod +x /usr/local/bin/wait-for-it.sh
+
+CMD ["wait-for-it.sh", "db:5432", "--", "python3", "app.py"]
