--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,5 @@
 version: "3.9"
 services:
-  backend:
-    build: ./Backend
-    ports:
-      - "5000:5000"
-    environment:
-      - FLASK_ENV=development  
-    depends_on:
-      - db
-
   db:
     image: postgres:latest
     environment:
@@ -18,11 +9,24 @@ services:
     ports:
       - "5433:5432"
 
+  backend:
+    build: ./Backend
+    depends_on:
+      - db
+    ports:
+      - "5000:5000"
+    environment:
+      - FLASK_ENV=development
+    volumes:
+      - ./Backend:/app
+    command: ["wait-for-it.sh", "db:5432", "--", "python3", "app.py"]
+
   frontend:
     build: ./Frontend
     ports:
       - "3000:3000"
     environment:
       - CHOKIDAR_USEPOLLING=true
-    depends_on:
-      - backend
+
+volumes:
+  db_data:
